--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,29 @@
 /* Global */
 
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    cursor: default;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.section {
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+}
+
+
 :root {
 
     /* Color */
@@ -49,8 +73,12 @@
     --weight-regular: 400;
 
     /* Size */
+
     --size-border-radius: 4px;
 
+    /* Animation */
+
+    --animation-duration: 300ms;
 }
 
 /* Button */
@@ -60,6 +88,8 @@ button {
     border: none;
     outline: none;
 }
+
+
 
 
 /* Typography */
