--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,10 @@ ul {
 .section {
     padding: 50px;
     text-align: center;
+    margin: auto;
+}
+
+.section__container {
     max-width: 1200px;
     margin: auto;
 }
