--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 #home {
     background: url("/imgs/home-background.png") center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
 }
 
