--- a/css/work.css
+++ b/css/work.css
@@ -52,6 +52,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+}
+
+.work__projects.anim-out {
+    opacity: 0;
+    transform: scale(0.9) translateY(40px);
+    -webkit-transform: scale(0.9) translateY(40px);
+    -moz-transform: scale(0.9) translateY(40px);
+    -ms-transform: scale(0.9) translateY(40px);
+    -o-transform: scale(0.9) translateY(40px);
 }
 
 .project {
