--- a/css/navbar.css
+++ b/css/navbar.css
@@ -36,6 +36,7 @@
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;
     border-radius: var(--size-border-radius);
     -webkit-border-radius: var(--size-border-radius);
     -moz-border-radius: var(--size-border-radius);
@@ -43,11 +44,12 @@
     -o-border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
+/* .navbar__menu__item.active {
     border: 1px solid var(--color-white);
-}
+} */
 
 .navbar__menu__item:hover {
+    border-color: var(--color-white);
     background-color: var(--color-dark-pink);
 }
 
