--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,18 +1,29 @@
 @media screen and (max-width: 768px) {
+
     .navbar__toggle-btn {
         display: block;
     }
 
     #navbar {
+        background-color: var(--color-pink);
         flex-direction: column;
         align-items: flex-start;
     }
 
+    #navbar.navbar--dark {
+        padding: 16px;
+    }
+
     .navbar__menu {
+        background-color: var(--color-pink);
         flex-direction: column;
         text-align: center;
         width: 100%;
         display: none;
+    }
+
+    .navbar__menu.open {
+        display: block;
     }
 
     .about__majors {
@@ -21,6 +32,11 @@
 
     .major {
         margin-bottom: 38px;
+    }
+
+    .category__btn {
+        margin: 4px 0;
+        width: 70%;
     }
 
     .skillset {
@@ -34,5 +50,47 @@
     .testimonial__avatar {
         width: 80px;
         height: 80px;
+    }
+
+    .section {
+        padding: 16px;
+    }
+
+    .testimonial {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .testimonial__avatar {
+        width: 120px;
+        height: 120px;
+    }
+
+    .testimonial__avatar:nth-child(even) {
+        margin: 0;
+        margin-bottom: 8px;
+    }
+
+    .testimonial__avatar:nth-child(odd) {
+        margin: 0;
+        margin-bottom: 8px;
+    }
+
+
+    .testimonial__speech-bubble {
+        order: 1;
+    }
+
+    .arrow-up {
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+        line-height: 50px;
+        right: 16px;
+        bottom: 16px;
+    }
+
+    .section {
+        padding-top: 40px;
     }
 }
