--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 #home {
-    background: url("/imgs/home-background.png") center/cover no-repeat;
+    background: url("https://ohtaeyang95.github.io/JavaScriptSite/imgs/home-background.png") center/cover no-repeat;
     padding: 40px;
     padding-top: 120px;
     text-align: center;
