--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,6 +8,7 @@
     background-color: transparent;
     color: var(--color-white);
     padding: 16px;
+    user-select: none;
     transition: all var(--animation-duration) ease-in;
     -webkit-transition: all var(--animation-duration) ease-in;
     -moz-transition: all var(--animation-duration) ease-in;
@@ -21,9 +22,13 @@
     padding: 8px;
 }
 
-.navbar__menu {
-    display: flex;
 
+
+.navbar__menu {
+    margin-top: 0;
+    margin-right: 30px;
+    margin-left: -16px;
+    display: flex;
 }
 
 .navbar__logo {
@@ -35,19 +40,20 @@
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;
     border-radius: var(--size-border-radius);
     -webkit-border-radius: var(--size-border-radius);
     -moz-border-radius: var(--size-border-radius);
     -ms-border-radius: var(--size-border-radius);
     -o-border-radius: var(--size-border-radius);
-    user-select: none;
 }
 
-.navbar__menu__item.active {
+/* .navbar__menu__item.active {
     border: 1px solid var(--color-white);
-}
+} */
 
 .navbar__menu__item:hover {
+    border-color: var(--color-white);
     background-color: var(--color-dark-pink);
 }
 
