--- a/css/work.css
+++ b/css/work.css
@@ -1,4 +1,5 @@
 .category__btn {
+    width: 220px;
     border: 1px solid var(--color-dark-grey);
     border-radius: var(--size-border-radius);
     -webkit-border-radius: var(--size-border-radius);
